--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snakou",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "author": "zaekof ",
   "description": "A Snakou software, get last videos and streams notification",
   "license": "MIT",
@@ -67,6 +67,7 @@
     "jquery": "^3.3.1",
     "node-notifier": "^5.4.0",
     "path": "^0.12.7",
+    "sweetalert2": "^8.8.0",
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1"
