--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "output": "build"
     },
     "files": [
-      "dist/electron/**/*"
+      "dist/electron/**/*",
+      "dist/electron/static/*"
     ],
     "dmg": {
       "contents": [
@@ -63,6 +64,7 @@
     "download": "^7.1.0",
     "electron-store": "^3.0.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^7.0.1",
     "howler": "^2.1.1",
     "jquery": "^3.3.1",
     "node-notifier": "^5.4.0",
