--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jquery": "^3.3.1",
     "node-notifier": "^5.4.0",
     "path": "^0.12.7",
+    "remote": "^0.2.6",
     "sweetalert2": "^8.8.0",
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
